--- a/src/assets/style/global.css
+++ b/src/assets/style/global.css
@@ -8,3 +8,10 @@ body {
   font-family: 'Roboto', sans-serif;
   color: white;
 }
+
+.center {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
